cmake: make opengl and vulkan optional and simplify
- remove pkg-conf REQUIRED tag from glfw3 and vulkan
- remove pkg-conf conditional statements to set defaults,
  simply use the ${LIB}_FOUND variables as option defaults.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ if (HAVE_LIB_M)
 endif (HAVE_LIB_M)
 
 find_package(PkgConfig)
-pkg_check_modules(GLFW3 REQUIRED glfw3)
-pkg_check_modules(VULKAN REQUIRED vulkan)
+pkg_check_modules(GLFW3 glfw3)
+pkg_check_modules(VULKAN vulkan)
 
 # Find OpenGL library
 include(FindOpenGL)
@@ -25,17 +25,8 @@ if (NOT Vulkan_GLSLANG_VALIDATOR_EXECUTABLE)
 endif()
 
 # set defaults for options
-set (OPENGL_EXAMPLES_DEFAULT ON)
-set (VULKAN_EXAMPLES_DEFAULT ON)
-if (NOT OSMESA_FOUND)
-    set (OSMESA_EXAMPLES_DEFAULT OFF)
-endif ()
-if (NOT OpenGL_OpenGL_FOUND)
-    set (OPENGL_EXAMPLES_DEFAULT OFF)
-endif ()
-if (NOT Vulkan_FOUND)
-    set (VULKAN_EXAMPLES_DEFAULT OFF)
-endif ()
+set (OPENGL_EXAMPLES_DEFAULT ${OpenGL_OpenGL_FOUND})
+set (VULKAN_EXAMPLES_DEFAULT ${VULKAN_FOUND})
 if(NOT Vulkan_GLSLANG_VALIDATOR_EXECUTABLE)
     set (VULKAN_EXAMPLES_DEFAULT OFF)
 endif()
