glcube: backport shader to GLSL v1.20 for OpenGL 2.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ endif()
 
 # set defaults for options
 set (OPENGL_EXAMPLES_DEFAULT ${OpenGL_OpenGL_FOUND})
-set (VULKAN_EXAMPLES_DEFAULT ${VULKAN_FOUND})
+set (VULKAN_EXAMPLES_DEFAULT ${Vulkan_FOUND})
 if(NOT Vulkan_GLSLANG_VALIDATOR_EXECUTABLE)
     set (VULKAN_EXAMPLES_DEFAULT OFF)
 endif()
@@ -111,8 +111,8 @@ if (OPENGL_EXAMPLES)
 endif (OPENGL_EXAMPLES)
 
 if (VULKAN_EXAMPLES)
-    file(GLOB_RECURSE VERTEX_SHADER_SOURCE "${SHADER_DIR}/*.vert")
-    file(GLOB_RECURSE FRAGMENT_SHADER_SOURCE "${SHADER_DIR}/*.frag")
+    file(GLOB_RECURSE VERTEX_SHADER_SOURCE "${SHADER_DIR}/*.v450.vert")
+    file(GLOB_RECURSE FRAGMENT_SHADER_SOURCE "${SHADER_DIR}/*.v450.frag")
     set(SHADER_SOURCE ${VERTEX_SHADER_SOURCE} ${FRAGMENT_SHADER_SOURCE})
     source_group("shaders" FILES ${SHADER_SOURCE})
 
